# lora-finetune

./: config.yaml  dataset.py  run.py  run_train.py  train.py
auraflow/: pyproject.toml  setup.py
auraflow/configs/: lora.yaml
auraflow/scripts/: train.py  train.sh
auraflow/src/adapter/: model.py  trainer.py
auraflow/src/auraflow/: auraflow.py
auraflow/src/data/: dataset.py
src/: lumina.py  model.py  pipeline.py  utils.py
